Renamed theme and directories

--- a/themes/boilerplate/style.css
+++ b/themes/boilerplate/style.css
@@ -1,6 +1,6 @@
 /**
  * Author: Boyztoys
  * Description: A WordPress theme specifically brewed for boyz.toys
- * Theme: Boyztoys
+ * Theme: WordPress Boilerplate
  * Version: 1.0.0
  */
